--- a/config/config.yaml
+++ b/config/config.yaml
@@ -9,6 +9,7 @@ artifacts:
 
   clean_data_dir: clean_data_dir
   fill_missing_value_df: fill_values.csv
+  remove_outliers_df: clean_data.csv
   
   feature_selection_dir: feature_selection_dir
   feature_selection_score: feature_imporatant_score.csv
