--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -1,5 +1,8 @@
 name: model-train-evalute
-  on: [push]
+  on:
+    push:
+      branches:
+        - 'main'
   jobs:
     run:
       runs-on: [ubuntu-latest]
