--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -1,16 +1,24 @@
-name: model-train-evalute
-  on:
-    push:
-      branches:
-        - 'main'
-  jobs:
-    run:
-      runs-on: [ubuntu-latest]
-      container: docker://dvcorg/cml-py3:latest
-      steps:
-        - uses: actions/checkout@v2
-        - name: 'Train and Evaluate model'
-        shell: bash
+name: ci
+
+# run the workflow on every push to main branch
+
+on:
+  push:
+    branches:
+      - 'main'
+    
+# your work flow job 
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    container: docker://dvcorg/cml-py3:latest
+    steps:
+      -
+        name: Checkout
+        uses: actions/checkout@v2
+
+      - 
+        name: train_eval
         run: |
         # Install requirements
           pip install -r requirements.txt
@@ -23,7 +31,15 @@ name: model-train-evalute
           echo "## Metrics" >> README.md
           git fetch --prune
           dvc metrics diff master --show-md >> README.md
-    
+
+
+
+
+
+
+
+
+
     
 
         
