--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -16,21 +16,10 @@ jobs:
       -
         name: Checkout
         uses: actions/checkout@v2
-
-       
-      - name: train_eval
-        run: |
-        # Install requirements
-          pip install -r requirements.txt
-
-          # Pull data & run-cache from IBM COS and reproduce pipeline
-          dvc pull --run-cache
-          dvc repro
-
-          # Report metrics
-          echo "## Metrics" >> README.md
-          git fetch --prune
-          dvc metrics diff master --show-md >> README.md
+      - 
+        name: intsall requ
+        run: pip install -r requirements.txt
+      
 
 
 
