--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -19,6 +19,18 @@ jobs:
       - 
         name: intsall requ
         run: pip install -r requirements.txt
+      -
+        name: Pull data & run-cache from IBM COS
+        run: dvc pull --run-cache
+      - 
+        name: reproduce pipeline
+        run: dvc repro
+      - 
+        name: Report metrics
+        run: | 
+          echo "## Metrics" >> README.md
+          git fetch --prune
+          dvc metrics diff master --show-md >> README.md
       
 
 
