--- a/.dvc/config
+++ b/.dvc/config
@@ -1,4 +1,4 @@
 [core]
-    remote = dvc_remote_dir
-['remote "dvc_remote_dir"']
-    url = gdrive://1ChrG42yLb2cgIs0_W-_lfz7bA189wSIj
+    remote = remote_dir
+['remote "remote_dir"']
+    url = gdrive://1EFmXB3ZSZO81Zxgu19viHssjxuG8T-ee
