--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -21,7 +21,10 @@ jobs:
         run: pip install -r requirements.txt
       -
         name: Pull data & run-cache from IBM COS
-        run: dvc pull --run-cache
+        run: |
+            dvc remote modify --local storage_data access_key_id ${{secrets.S3_ACCESS_KEY}}
+            dvc remote modify --local storage_data secret_access_key ${{S3_SECREAT_KEY}}
+            dvc pull --run-cache
       - 
         name: reproduce pipeline
         run: dvc repro
