--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,123 @@
--e .
-
-# dvc
+aiobotocore
+aiohttp
+aiohttp-retry
+aioitertools
+aiosignal
+amqp
+antlr4-python3-runtim
+appdirs
+async-timeout
+asyncssh
+atpublic
+attrs
+billiard
+boto3
+botocore
+cachetool
+celery
+certifi
+cffi
+charset-normalizer
+click
+click-didyoumean
+click-plugins
+click-repl
+colorama
+commonmark
+configobj
+cryptography
+dictdiffer
+diskcache
+distro
+dpath
+dulwich
 dvc
-dvc[s3]
-
-# other important libs
+dvc-data
+dvc-gdrive
+dvc-http
+dvc-objects
+dvc-render
+dvc-s3
+dvc-studio-client
+dvc-task
+dvclive
+filelock
+flatten-dict
+flufl.lock
+frozenlist
+fsspec
+funcy
+future
+gitdb
+GitPython
+google-api-core
+google-api-python-client
+google-auth
+google-auth-httplib2
+googleapis-common-protos
+grandalf
+httplib2
+hydra-core
+idna
+imbalanced-learn
+imblearn
+iterative-telemetry
+jmespath
+joblib
+kombu
+multidict
+nanotime
+networkx
+numpy
+oauth2client
+omegaconf
+packaging
 pandas
+pathspec
+prompt-toolkit
+protobuf
+psutil
+pyasn1
+pyasn1-modules
+pycparser
+pydot
+PyDrive2
+pygit2
+Pygments
+pygtrie
+pyOpenSSL
+pyparsing
+python-dateutil
+pytz
+pywin32
+PyYAML
+requests
+rich
+rsa
+ruamel.yaml
+ruamel.yaml.clib
+s3fs
+s3transfer
 scikit-learn
+scipy
+scmrepo
+shortuuid
+shtab
+six
+smmap
+-e git+https://github.com/hdesai0436/diabetes_predication_dvc.git@a8b5ef80ead65ec2ae99d3dae75d5ef272e88c99#egg=src
+tabulate
+threadpoolctl
+tomlkit
+tqdm
+typing_extensions
+upgrade-requirements
+uritemplate
+urllib3
+vine
+voluptuous
+wcwidth
+wrapt
 xgboost
-
+yarl
+zc.lockfile
