--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -1,6 +1,9 @@
 name: Python Package and Test
 
-    on: [push]
+    on: 
+      push:
+        branches:
+          - 'main'
 
     jobs:
         build:
