--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -1,17 +1,19 @@
-name: Python Package and Test
+name: ci
 
-    on: 
-      push:
-        branches:
-          - 'main'
+# run the workflow on every push to main branch
 
-    jobs:
-        build:
-
-        runs-on: ubuntu-latest
-        strategy:
+on:
+  push:
+    branches:
+      - 'main'
+    
+# your work flow job 
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    strategy:
         matrix:
-            python-version: [3.10.5]
+            python-version: [3.10.6]
 
         steps:
         - uses: actions/checkout@v2
@@ -30,6 +32,7 @@ name: Python Package and Test
         - name: Python Black
         run: |
         black . --check
+    
 
 
 
