--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -11,28 +11,30 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-        matrix:
-            python-version: [3.10.6]
-
-        steps:
-        - uses: actions/checkout@v2
-        - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
-        with:
-        python-version: ${{ matrix.python-version }}
-        - name: Install dependencies
+    container: docker://dvcorg/cml-py3:latest
+    steps:
+      -
+        name: Checkout
+        uses: actions/checkout@v3
+      - 
+        name: intsall requ
+        run: pip install -r requirements.txt
+      -
+        name: Pull data & run-cache from IBM COS
         run: |
-        python -m pip install --upgrade pip
-        pip install pytest black
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        - name: Test with pytest
-        run: |
-        pytest
-        - name: Python Black
-        run: |
-        black . --check
-    
+            dvc remote modify --local storage_data access_key_id ${{secrets.S3_ACCESS_KEY}}
+            dvc remote modify --local storage_data secret_access_key ${{secrets.S3_SECREAT_KEY}}
+            dvc pull --run-cache
+      - 
+        name: reproduce pipeline
+        run: dvc repro
+      - 
+        name: Report metrics
+        run: | 
+          echo "## Metrics" >> README.md
+          git fetch --prune
+          dvc metrics diff master --show-md >> README.md
+      
 
 
 
