--- a/config/config.yaml
+++ b/config/config.yaml
@@ -22,6 +22,13 @@ artifacts:
   model:
     model_dir: model_dir
     model_file: pipe.pkl
+
+metrics:
+  SCORES: score.json
+
+plots:
+  PRC: pre.json
+  ROC: roc.json
   
 
 
