--- a/dvc.yaml
+++ b/dvc.yaml
@@ -74,8 +74,23 @@ stages:
 
     
     metrics:
-      - metrics.json:
-          cache: False
+      - score.json:
+          cache: false
+    plots:
+      - pre.json:
+          cache: false
+          x: recall
+          y: precision
+
+      - roc.json:
+          cache: false
+          x: fpr
+          y: tpr
+
+  run_plots_command:
+    cmd: dvc plots diff
+
+      
 
 
 
