--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -26,8 +26,8 @@ jobs:
             echo "# REPORTS" >> report.md
             echo "## metrics" >> report.md
             cat score.json >> report.md
-
-            cml-send-comment report.md
+            cml comment create report.md
+          
             
 
 
